app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
@import "font-awesome-sprockets";
@import "font-awesome";

@import url('https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou');
@import url('https://fonts.googleapis.com/css?family=Montserrat|Oswald&display=swap');

$dissent-green: #3be1ea;
$background-gray: #efeeee;
$success-red: #ff7455;
$offwhite: #f5f5f5;

html, body {
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
}

* {
  transition: all 0.2s ease;
}

body {
  background-color: #f5f5f5;
  color: #525252;
}

video {
  outline: none;
  width: 50%;
}

.alert {
  padding: 2px 6px;
}

a {
  font-style: italic;
  color: inherit;
}

a:hover, a:focus, a:visited {
  color: inherit;
  background-color: inherit;
  text-decoration: none;
  cursor: pointer;
}

a.button, input.button {
  font-style: normal;
  border: 1px solid #505050;
  padding: 2px 5px;
  background-color: #8e8e8e;
  color: whitesmoke !important;
  border-radius: 2px;
  font-size: 10px;
  text-transform: uppercase;
  vertical-align: middle;

  &:hover {
    background-color: #bbb9b9;
  }
}

p {
  white-space: pre-wrap;
}

.underline {
  text-decoration: underline;
}

.flex-container {
  display: flex;
  justify-content: space-between;

  @media (max-width: 768px) {
    flex-direction: column;
  }
}

textarea:focus, input:focus {
  outline: 0;
}

.form-mini {
  padding: 2px 6px;
  border-radius: 2px;
  border: 1px solid #a9a6a6;
  margin-bottom: 10px;
}

.backdrop, #activator, #solver, #dashboard, #main-feed {
  z-index: 1;

  input {
    color: #3a3a3a;
  }
}

.proposal, .issue, .discussion {
  padding: 0px 4px;
  background-color: transparent;
}


.participation-meter {
	height: 14px;
	border: 1px solid;
}

.participation-progress {
	border-right: 1px solid;
	border-radius: 2px 0 0 2px;
}

.form-tab {
  background-color: #efeeee;
  padding: 10px;
  border: 1px solid #ddd;
  border-top: 0;

  * {
    color: #423f3f;
  }
}

.form-full {
  border-top: 1px solid #ddd;

  h1 {
    margin-top: 0px;
  }
}

#post-something {
  margin: 20px 0em;
  display: inline-block;
  border-radius: 2px;
  width: 100%;

  a {
    color: white;
    font-style: normal;
    text-transform: uppercase;
    padding: 4px 6px;
    font-size: 12px;
    border-radius: 2px;
    background-color: #225290;
  }
}


// TOOLTIP

.tooltip-toggle {
  position: relative;

  &::before {
    background-color: #000;
    border-radius: 2px;
    color: #fff;
    content: attr(aria-label);
    left: -5px;
    padding: 2px;
    padding-right: 4px !important;
    position: absolute;
    text-transform: none;
    top: -24px;
    z-index: 4;
  }

  &::after {
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-top: 5px solid #000;
    content: " ";
    font-size: 0;
    left: 9px; //This centers the arrow above the element with the tooltip
    line-height: 0;
    margin-left: -8px;
    position: absolute;
    top: -4px; //This positions the arrow at the bottom of the container
    width: 0;
  }

  //Setting up the transition
  &::before,
  &::after {
    opacity: 0;
    pointer-events: none;
  }

  //Triggering the transition
  &:focus::before,
  &:focus::after,
  &:hover::before,
  &:hover::after {
    opacity: 1;
  }
}

.tooltip-toggle.upvote-tooltip {
  &::before {
    color: #fff;
    left: 19px;
    margin-left: -4px;
    top: 18px;
    padding-left: 14px;
    padding-right: 14px;
    border-radius: 40px;
    z-index: 1;
  }

  &::after {
    display: none;
  }
}

// TOOLTIP ENDS



.gray {
  color: gray;
}

.lightgray {
  color: #b9b9b9;
}

.red {
  color: #ff7455;
}

.green {
  color: $dissent-green;
}

.darkgreen {
  color: #049aa2;
}

.crimson {
  color: #983333;
}


header {

  a, a:visited, b {
    font-style: normal;
  }

  a:hover, a:focus {
    background-color: transparent !important;
  }

  ul.dropdown-menu{
    a {
      color: black !important;
    }

    a:hover {
      color: gray;
    }
  } 

  // .nav {
  //   display: inline-block;
  //   float: right;

  //   li {
  //     display: inline-block;
  //   }
  // }
}

// #toolbar {
//   border: 1px solid;
//   background-color: transparent;

//   > * {
//     display: inline-block;
//   }
  
//   ul {
//     padding: 0;
//     margin: 0;
//     display: table-cell;
//   }

//   #logo {
//     font-style: normal;
//     font-family: 'Oswald', sans-serif;
//     font-size: 3em;
//     font-weight: bold;
//     font-size: 20px;
//   }

//   li {
//     list-style: none;
//     padding: 2px 8px;
//     display: table-cell;
//     height: 100%;
//     // float: left;
//     vertical-align: middle;
//   }

//   li#logo {
//     background-color: transparent !important;
//   }

//   ul#toolbar-1 li:nth-child(even) {
//     background-color: #828080;
//     color: #dedddd;
//   }

//   ul#toolbar-1 li:nth-child(odd) {
//     background-color: #dedddd;
//     color: #828080;
//   }
// }


// reduce navbar height

.navbar {
  min-height: 34px;
}

.navbar-brand {
  padding: 0 10px;
  height: 20px;
  line-height: 30px;
}

.nav > li > a {
  padding: 10px;
}

.navbar-toggle {
  /* (80px - button height 34px) / 2 = 23px */
  margin-top: 9px;
  padding: 9px 10px !important;
}

@media (min-width: 768px) {
  .navbar-nav > li > a {
    /* (80px - line-height of 27px) / 2 = 26.5px */
    padding-top: 10.5px;
    padding-bottom: 10.5px;
    line-height: 11px;
  }
}
// end reduce navbar height


body {
	margin: 0;
}

h1 {
  font-size: 24px;
}

h2 {
  font-size: 18px
}

h3 {
  font-size: 16px;
  margin: 4px 0;
}

i {
	color: inherit;
}

hr {
  margin: 2px;
  border: 0.5px solid black;
}

.converge-container {
  margin-right: auto;
  margin-left: auto;
  padding-left: 15px;
  padding-right: 15px;
  margin-top: 20px;
}

.converge-header {
  margin-right: auto;
  margin-left: auto;
  padding-left: 15px;
  padding-right: 15px;
}

.converge-container:before, .converge-container:after {
  content: " ";
  display: table;
}
/* line 19, /Users/leo/.rvm/gems/ruby-2.5.1/gems/bootstrap-sass-3.3.7/assets/stylesheets/bootstrap/mixins/_clearfix.scss */
.converge-container:after {
  clear: both;
}

@media (min-width: 768px) {
  .converge-container, .converge-header {
    width: 750px;
  }
}
@media (min-width: 992px) {
  /* line 10, /Users/leo/.rvm/gems/ruby-2.5.1/gems/bootstrap-sass-3.3.7/assets/stylesheets/bootstrap/_grid.scss */
  .converge-container, .converge-header {
    width: 970px;
  }
}
@media (min-width: 1200px) {
  /* line 10, /Users/leo/.rvm/gems/ruby-2.5.1/gems/bootstrap-sass-3.3.7/assets/stylesheets/bootstrap/_grid.scss */
  .converge-container, .converge-header {
    width: 1000px;
  }
}

@media (max-width: 767px) {
  .navbar #logo {
    margin: 10px;
  }
}

#main-feed {
  // margin: 3em 0em;

  p, a {
    font-family: 'Montserrat', sans-serif;
    font-style: normal;
  }
}

.backdrop, #activator, #solver, #dashboard, #main-feed {
  width: auto;
}

nav #logo {
  font-style: normal;
  font-family: 'Oswald', sans-serif;
  float: left;
  font-size: 2em;
  font-weight: bold;
  letter-spacing: -1px;
}

// .nav li {
//   font-family: 'Montserrat', sans-serif;
//   font-size: 1.2em;
//   text-transform: uppercase;
// }

// .nav.nav-tabs {
// 	width: 100%;
// 	margin: auto;

//   a {
//     font-style: normal;
//   }
// }

// .navbar-nav > li > a {
//   padding-top: 10px;
//   padding-left: 0;
//   padding-right: 12px;
// }

// .nav-tabs .active a {
//   background-color: #1a1a1a !important;
// }

.navbar {
  background-color: #f1f1f1;
  border-color: #e2e1e1;
}

.back-button {
  height: 30px;

  .back-button-content {
    padding: 4px 6px 4px 4px;
    width: fit-content;
    display: inline-block;
    vertical-align: top;
    float: left;
    // background-color: #424242;
    background-color: #525252;
    color: white;
    line-height: 12px;
    font-size: 10px;
    font-style: normal;
  }

  .back-button-arrow {
    width: 0; 
    height: 0; 
    border-top: 10px solid transparent;
    border-bottom: 10px solid transparent; 
    // border-right: 10px solid #424242;
    border-right: 10px solid #525252;
    display: inline-block; 
    vertical-align: top;
    float: left;
  }
}

#daily-quote {
  text-align: left;
  width: fit-content;
  max-width: 430px;
  margin: auto;
  font-size: 12px;
  display: inherit;
  margin-bottom: 20px;
  padding: 4px;
  border-radius: 2px;
  border: 1px solid #ababab;
}

.users {
  padding: 0;

  li {
    border-bottom: none;
  }
}

.paginate-users {
  .pagination {
    margin: 0;    
  }
}

.admin-section {
  position: relative;
  bottom: 0;
  left: 0;
  margin: 10px;
}

.outer-login {
  text-align: center;
  color: #676767;

  h1 {
    margin-top: 10vh;
  }
}

.inner-login {
  width: 250px;
  margin: auto;
  text-align: right;
  position: relative;
  left: -28px;
}

